# guacamayo-cli

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
src/: Makefile.am  connman-agent-introspection.h  connman-manager-introspection.h  connman.c  connman.h  hostname.c  hostname.h  main.c  main.h  timezone.c  timezone.h  vtmanager.c  vtmanager.h
